# discourse-tui

./: Cargo.toml  LICENSE  README.md  discourse-tui.desktop  theme.toml
src/: api.rs  main.rs  ui.rs  util.rs
