[package]
name = "discourse-tui"
version = "0.1.0"
authors = ["Paul Sajna <paulsajna@gmail.com>"]

[dependencies]
cursive = "0.8"
openssl = "0.10"
reqwest = "0.8"
hyper = "0.11.25"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.9"
chrono = "0.4"
chrono-humanize = "0.0"
app_dirs = "1.2"
textwrap = "0.9"
percent-encoding = "1.0.1"
