[package]
name = "discourse-tui"
version = "0.1.0"
authors = ["Paul Sajna <paulsajna@gmail.com>"]

[dependencies]
openssl = "0.10"
reqwest = { git = "https://gitlab.redox-os.org/redox-os/reqwest.git" }
hyper = { git = "https://gitlab.redox-os.org/redox-os/hyper.git" }
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.9"
chrono = "0.4"
chrono-humanize = "0.0"
app_dirs = { git = "https://gitlab.redox-os.org/redox-os/app-dirs-rs.git" }
textwrap = "0.9"
percent-encoding = "1.0.1"

[dependencies.cursive]
git = "https://github.com/gyscos/cursive"
default-features=false
features=["termion-backend"]
